Change background for body Tests an issue on iOS

--- a/public/styles.css
+++ b/public/styles.css
@@ -35,6 +35,11 @@ html,
   --scrollbar-dark: rgba(255, 255, 255, 0.3);
 }
 
+/* For testing on iOS */
+body {
+  background: #111111;
+}
+
 /* Default Colors */
 .App {
   background: var(--bg-light);
